prod/website/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laseris-website-api
  namespace: laseris-website
  labels:
    app: laseris-website-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laseris-website-api
  template:
    metadata:
      labels:
        app: laseris-website-api
    spec:
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: laseris-website-api
          image: ghcr.io/ptrrr/laseris-api:sha-b267e5d
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 400m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: laseris-website-api-service
  namespace: laseris-website
  labels:
    app: laseris-website-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: laseris-website-api
