prod/website/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laseris-website-app
  namespace: laseris-website
  labels:
    app: laseris-website-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laseris-website-app
  template:
    metadata:
      labels:
        app: laseris-website-app
    spec:
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: laseris-website-app
          image: ghcr.io/ptrrr/laseris-app:sha-2d5132e
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 400m
              memory: 512Mi
            requests:
              cpu: 300m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: laseris-website-app-service
  namespace: laseris-website
  labels:
    app: laseris-website-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: laseris-website-app
